WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167595
NULL-deref crash at PlatformMediaSession::endInterruption
https://bugs.webkit.org/show_bug.cgi?id=167595
Summary
NULL-deref crash at PlatformMediaSession::endInterruption
Jer Noble
Reported
2017-01-30 10:49:20 PST
NULL-deref crash at PlatformMediaSession::endInterruption
Attachments
Patch
(2.23 KB, patch)
2017-01-30 10:50 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2017-01-30 10:50:40 PST
Created
attachment 300124
[details]
Patch
Jer Noble
Comment 2
2017-01-30 10:51:00 PST
rdar://problem/30204866
WebKit Commit Bot
Comment 3
2017-01-30 14:10:24 PST
Comment on
attachment 300124
[details]
Patch Clearing flags on attachment: 300124 Committed
r211386
: <
http://trac.webkit.org/changeset/211386
>
WebKit Commit Bot
Comment 4
2017-01-30 14:10:28 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug