NULL-deref crash at PlatformMediaSession::endInterruption https://bugs.webkit.org/show_bug.cgi?id=167595

Reviewed by Eric Carlson.

Use the same, NULL-aware forEachSession() iterator rather than iterating over m_sessions directly.

* platform/audio/PlatformMediaSessionManager.cpp:
(WebCore::PlatformMediaSessionManager::beginInterruption):
(WebCore::PlatformMediaSessionManager::endInterruption):


Canonical link: https://commits.webkit.org/184627@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211386 268f45cc-cd09-0410-ab3c-d52691b4dbfc